fixed overflow sections

--- a/src/components/Insights/Insights.module.css
+++ b/src/components/Insights/Insights.module.css
@@ -1,5 +1,6 @@
 .Insights{
-    height:100vh;
+    overflow: auto;
+    min-height:100vh;
 }
 .Insights_title {
     font-family: Italiana;
