--- a/src/components/TargetQuestion/TargetQuestionSection.module.css
+++ b/src/components/TargetQuestion/TargetQuestionSection.module.css
@@ -1,7 +1,8 @@
 .targetquestion {
     padding: 0 2rem;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
+    overflow: auto;
     align-items: center;
     justify-content: center;
 }
