--- a/src/components/TeamBlock/TeamBlock.module.css
+++ b/src/components/TeamBlock/TeamBlock.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 75vh;
+  min-height: 75vh;
+  overflow: auto;
 }
 
 .Block {
